--- a/swipe/swipejq.html
+++ b/swipe/swipejq.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>手指滑屏</title>
+<title>jquery手指滑屏</title>
 <head>    
 <script src="js/jquery.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -28,7 +28,6 @@ html,body{height:100%;overflow:hidden;}
 .img2_word{position:absolute;width:60% !important;right:0;bottom:0;height:auto !important;}
 .box0-list{animation-delay:2s;-webkit-animation-delay:5s;}
 .anirepeat{-webkit-animation-iteration-count: infinite;animation-iteration-count: infinite;}
-
 .testarea1{height:100px;position:absolute;width:100%;background:#ccc;z-index:99;top:50%;}
 </style>
 </head>
