--- a/swipe/swipejq.html
+++ b/swipe/swipejq.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>jquery手指滑屏</title>
+<title>jquery手指滑屏,一屏一动</title>
 <head>    
 <script src="js/jquery.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
