--- a/swipe/swipejq.html
+++ b/swipe/swipejq.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
-<title>jquery手指滑屏,一屏一动</title>
+<title>手指滑屏</title>
 <head>    
-<script src="js/jquery.js"></script>
+<script src="http://static.paipaiimg.com/js/jquery.1.8.js?t=1.8.3" type="text/javascript" charset="utf-8"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<link rel="stylesheet" href="http://blog.chenpansong.cn/assets/animate.css" type="text/css">
 <meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="">
 <style type="text/css">
 *{margin:0;padding:0;}
 html,body{height:100%;overflow:hidden;}
@@ -27,76 +25,42 @@ html,body{height:100%;overflow:hidden;}
 .anims{display:none;}
 .img2_word{position:absolute;width:60% !important;right:0;bottom:0;height:auto !important;}
 .box0-list{animation-delay:2s;-webkit-animation-delay:5s;}
-.anirepeat{-webkit-animation-iteration-count: infinite;animation-iteration-count: infinite;}
-.testarea1{height:100px;position:absolute;width:100%;background:#ccc;z-index:99;top:50%;}
 </style>
 </head>
 <body>
 <div class="module" data-spm="$spm_module_id">
     <div class="cps_container">
-    	<p class="show"></p>
 		<div class="main-box box-0">
 			<img src="http://s6.mogucdn.com/pic/141119/13t2zv_ieygemzsgi2wezjzmqytambqgyyde_1080x1919.png" class="bg_img">
-			<div class="box-list box0-list notouch">
-				<img src="http://s7.mogucdn.com/pic/141118/13t2zv_ieydgy3cg44tgojzmqytambqgiyde_544x231.png">
-			</div>
-			<div class="testarea1 notouch"></div>
+			
 		</div>
 		<div class="main-box box-1">
 			<img data-src="http://s6.mogucdn.com/pic/141119/13t2zv_ieydoylbgy2dkzjzmqytambqmeyde_640x1137.jpg" class="bg_img lazyload">
-			<div class="box-list box1-list">
-				<img data-src="http://s7.mogucdn.com/pic/141119/13t2zv_ieydcmjymm4wmyzzmqytambqgyyde_872x295.png" class="lazyload">
-			</div>
-			<img src="http://s7.mogucdn.com/pic/141118/13t2zv_ieydgy3cg44tgojzmqytambqgiyde_544x231.png" class="anims img2_word">
 		</div>
 		<div class="main-box box-2">
 			<img data-src="http://web.sunworldmedia.com/dkn/118aymq/i/3.jpg" class="bg_img lazyload">
-			<div class="box-list box2-list">
-				<img data-src="http://s20.mogucdn.com/pic/141119/13t2zv_ieydaoddga4tamdbmqytambqhayde_950x388.png" class="lazyload">
-			</div>
 		</div>
 		<div class="main-box box-3">
 			<img data-src="http://web.sunworldmedia.com/dkn/118aymq/i/5.jpg" class="bg_img lazyload">
-			<div class="box-list box3-list">
-				<img data-src="http://s6.mogucdn.com/pic/141119/13t2zv_ieydkzbqmvrdqzjzmqytambqmmyde_904x271.png" class="lazyload">
-			</div>
 		</div>
 		<div class="main-box box-4">
 			<img data-src="http://web.sunworldmedia.com/dkn/118aymq/i/8.jpg" class="bg_img lazyload">
-			<div class="box-list box4-list">
-				<img data-src="http://s8.mogucdn.com/pic/141120/13t2zv_ieydembvmzrtcmdbmqytambqmmyde_318x212.png" class="lazyload" />
-			</div>
 		</div>
 		<!--again-->
 		<div class="main-box box-5">
 			<img src="http://s6.mogucdn.com/pic/141119/13t2zv_ieydoylbgy2dkzjzmqytambqmeyde_640x1137.jpg" class="bg_img">
-			<div class="box-list box5-list">
-				<img src="http://s7.mogucdn.com/pic/141118/13t2zv_ieydgy3cg44tgojzmqytambqgiyde_544x231.png">
-			</div>
 		</div>
 		<div class="main-box box-6">
 			<img data-src="http://s6.mogucdn.com/pic/141119/13t2zv_ieygemzsgi2wezjzmqytambqgyyde_1080x1919.png" class="bg_img lazyload">
-			<div class="box-list box6-list">
-				<img data-src="http://s7.mogucdn.com/pic/141119/13t2zv_ieydcmjymm4wmyzzmqytambqgyyde_872x295.png" class="lazyload">
-			</div>
 		</div>
 		<div class="main-box box-7">
 			<img data-src="http://web.sunworldmedia.com/dkn/118aymq/i/3.jpg" class="bg_img lazyload">
-			<div class="box-list box7-list">
-				<img data-src="http://s20.mogucdn.com/pic/141119/13t2zv_ieydaoddga4tamdbmqytambqhayde_950x388.png" class="lazyload">
-			</div>
 		</div>
 		<div class="main-box box-8">
 			<img data-src="http://web.sunworldmedia.com/dkn/118aymq/i/5.jpg" class="bg_img lazyload">
-			<div class="box-list box8-list">
-				<img data-src="http://s6.mogucdn.com/pic/141119/13t2zv_ieydkzbqmvrdqzjzmqytambqmmyde_904x271.png" class="lazyload">
-			</div>
 		</div>
 		<div class="main-box box-9">
 			<img data-src="http://web.sunworldmedia.com/dkn/118aymq/i/8.jpg" class="bg_img lazyload">
-			<div class="box-list box9-list">
-				<img data-src="http://s8.mogucdn.com/pic/141120/13t2zv_ieydembvmzrtcmdbmqytambqmmyde_318x212.png" class="lazyload" />
-			</div>
 		</div>
     </div>
 </div>
@@ -113,7 +77,7 @@ $(function(){
 		triggerdis:150,//触摸这个距离后才翻屏
 		eventlist:["touchstart","touchmove","touchend"],//touch事件列表
 		log:function(a){
-	        if(config.isdebug){console.log(a);$(".show").html(a);}
+	        if(config.isdebug){console.log(a);}
 	    },//console事件debug模式
 		init:function(){
 			var _this=this;
@@ -147,23 +111,6 @@ $(function(){
 	// var lazy=new lazyload({container:$("body")});
 	/*每一屏初始化动画控制*/
 	function anim(index){
-		//先要清空所有的动画class，保证下一次触发的时候继续动画
-		function _init(){$(".box-list").add(".anims").removeClass("bounceInLeft zoomInRight zoomInDown rubberBand animated anirepeat lightSpeedIn");};
-		_init();
-		//每一屏的动画class
-		switch(index){
-			case 0:$(".box0-list").addClass("bounceInLeft animated anirepeat");break;
-			case 1:$(".box1-list").add(".img2_word").addClass("lightSpeedIn animated");break;
-			case 2:$(".box2-list").addClass("zoomInDown animated");break;
-			case 3:$(".box3-list").addClass("zoomInRight animated");break;
-			case 4:$(".box4-list").addClass("rubberBand animated");break;
-			case 5:$(".box5-list").addClass("bounceInLeft animated");break;
-			case 6:$(".box6-list").addClass("lightSpeedIn animated");break;
-			case 7:$(".box7-list").addClass("zoomInDown animated");break;
-			case 8:$(".box8-list").addClass("zoomInRight animated");break;
-			case 9:$(".box9-list").addClass("rubberBand animated");break;
-			default:_init();
-		}
 	}
 	/*绑定触摸事件*/
 	var _touch={
@@ -196,7 +143,7 @@ $(function(){
 		        	if($(el).next(config.el).length>=1)
 		        	{
 		        		if(_move.dis<-config.triggerdis)
-			        	$(el).animate({'height':0},config.speed,function(){anim(index+1);});
+			        	$(el).animate({'height':0},config.speed,function(){});
 			        	else
 			        	$(el).animate({'height':$(window).height()},config.speed);
 		        	}
@@ -206,7 +153,7 @@ $(function(){
 		        	if($(el).prev(config.el))
 		        	{
 			        	if(_move.dis>config.triggerdis)
-			        	$(el).prev(config.el).animate({"height":$(window).height()},config.speed,function(){anim(index-1);});
+			        	$(el).prev(config.el).animate({"height":$(window).height()},config.speed,function(){});
 			        	else
 			        	{
 			        		$(el).prev(config.el).animate({"height":0},config.speed);
